name:                stream
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Yorick Laupa
-- maintainer:
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: Data.Process

  other-modules: Data.Process.Plan
                 Data.Process.Process1
                 Data.Process.Resource
                 Data.Process.Tee
                 Data.Process.Type
                 Data.Process.Wye
                 Example

  build-depends:         base       ==4.6.*
                       , semigroups >=0.9.2
                       , exceptions >=0.3.2
                       , containers == 0.5.*
                       , bytestring